[package]
name = "cola"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "fs"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["io-util"] }

clap = { version = "4", features = ["derive"] }

anyhow = "1"
derivative = "2"
tap = "1"
tracing = "0.1"

rtnetlink = "0.12"
netlink-packet-route = "0.15"
cidr = "0.2"
