[package]
name = "mahiro-bpf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", rev = "5c86b7e" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", rev = "5c86b7e" }
network-types = "0.0"
memoffset = "0.8"
