[package]
name = "mahiro"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "time"] }
async-trait = "0.1"
tokio-stream = { version = "0.1", features = ["time"] }
futures-util = "0.3"
futures-channel = "0.3"
once_cell = "1"
bytes = "1"
derivative = "2"

# error handle
thiserror = "1"
anyhow = "1"
tap = "1"

# noise encrypt
snow = "0.9"
rand = "0.8"

# bpf
aya = { git = "https://github.com/aya-rs/aya", tag = "aya-log-v0.1.13", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya", tag = "aya-log-v0.1.13" }

# config
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# tun device
tun = { version = "0.5", features = ["async"] }
rtnetlink = "0.12"
netlink-packet-route = "0.15"
cidr = "0.2"

# transport data
prost = "0.11"

# actor
ractor = { git = "https://github.com/slawlor/ractor", rev = "b705eb8" }

# trace and log
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
replace_with = "0.1"

[build-dependencies]
prost-build = "0.11"
