[package]
name = "mahiro"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "time", "fs", "signal"] }
tokio-stream = { version = "0.1", features = ["time", "io-util"] }
futures-util = "0.3"
flume = { version = "0.10", git = "https://github.com/Sherlock-Holo/flume.git", rev = "9824485" }
once_cell = "1"
bytes = "1"
derivative = "2"
either = "1"

# error handle
thiserror = "1"
anyhow = "1"
tap = "1"

# noise encrypt
snow = "0.9"
rand = "0.8"
dashmap = "5"

# bpf
aya = { git = "https://github.com/aya-rs/aya", rev = "1fa1c14", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya", rev = "1fa1c14" }

# config
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_with = "2.3"
humantime = "2"
base64 = "0.21"

# tun device
tun = { version = "0.5", features = ["async"], git = "https://github.com/Sherlock-Holo/rust-tun.git", branch = "master" }
rtnetlink = "0.12"
netlink-packet-route = "0.15"
ipnet = "2"
network-types = "0.0"

# transport data
prost = "0.11"

# trace and log
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-log = "0.1"

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
replace_with = "0.1"
nix = "0.26"

[build-dependencies]
prost-build = "0.11"
