[package]
name = "mahiro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "time", "fs", "signal"] }
tokio-stream = { version = "0.1", features = ["time", "io-util"] }
futures-util = "0.3"
flume = { version = "0.10", git = "https://github.com/zesterer/flume.git", rev = "bfa2a9b" }
bytes = "1"
derivative = "2"
either = "1"

# error handle
anyhow = "1"
tap = "1"

# auth
totp-rs = { version = "5", features = ["otpauth"] }
dashmap = "5"

# http2
http = "0.2"
hyper = { version = "0.14", features = ["client", "server", "runtime", "http1", "http2", "stream"] }
hyper-rustls = { version = "0.24", features = ["http2", "logging"] }
rustls = "0.21"
tokio-rustls = "0.24"
rustls-pemfile = "1"
rustls-native-certs = "0.6"
webpki = { version = "0.22", features = ["std"] }

# bpf
aya = { git = "https://github.com/aya-rs/aya", rev = "58f1ecb", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya", rev = "58f1ecb" }

# config
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_with = "3"
humantime = "2"
base64 = "0.21"

# tun device
tun = { version = "0.5", features = ["async"], git = "https://github.com/Sherlock-Holo/rust-tun.git", branch = "master" }
rtnetlink = "0.12"
netlink-packet-route = "0.15"
ipnet = "2"
network-types = "0.0"

# trace and log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
tracing-log = "0.1"
time = { version = "0.3", features = ["macros", "formatting"] }

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
replace_with = "0.1"
nix = "0.26"
